tests/snapshots/medium/tests__medium_3sat_unsat_stderr.snap
---
source: tests/tests.rs
expression: stderr
---
Interactions
  Total               23_822
    Depth             10_893
    Breadth                2
  Annihilate          12_309
  Commute                255
  Copy                 2_892
  Erase                3_149
  Expand               1_849
  Call                 2_167
  Branch               1_201

Memory
  Heap                 8_768 B
  Allocated          507_552 B
  Freed              507_552 B

[Performance...]
