tests/snapshots/medium/tests__pigeonhole_3_2_unsat_stderr.snap
---
source: tests/tests.rs
expression: stderr
---
Interactions
  Total               55_081
    Depth             24_895
    Breadth                2
  Annihilate          29_228
  Commute                497
  Copy                 6_325
  Erase                7_020
  Expand               4_268
  Call                 4_950
  Branch               2_793

Memory
  Heap                14_064 B
  Allocated        1_189_184 B
  Freed            1_189_184 B

[Performance...]
