tests/snapshots/medium/tests__xor_parity_mix_sat.snap
---
source: tests/tests.rs
info:
  program: vine
  args:
    - run
    - dpll/main.vi
    - "--breadth-first"
---
success: true
exit_code: 0
----- stdout -----
satisfiable
evaluation under model: true
var 1 = true
var 2 = true
var 3 = true
var 4 = false

----- stderr -----

Interactions
  Total               38_607
    Depth             18_054
    Breadth                2
  Annihilate          19_878
  Commute                468
  Copy                 4_706
  Erase                4_957
  Expand               2_997
  Call                 3_649
  Branch               1_952

Memory
  Heap                10_704 B
  Allocated          825_856 B
  Freed              825_856 B

[Performance...]
