tests/snapshots/medium/tests__xor_parity_mix_sat_stdout.snap
---
source: tests/tests.rs
expression: stdout
---
satisfiable
evaluation under model: true
var 1 = true
var 2 = true
var 3 = true
var 4 = false
